tests/baselines/reference/jsdocParameterParsingInfiniteLoop.errors.txt
example.js(3,11): error TS7014: Function type, which lacks return-type annotation, implicitly has an 'any' return type.
example.js(3,20): error TS1110: Type expected.
example.js(3,21): error TS2304: Cannot find name 'foo'.


==== example.js (3 errors) ====
    // @ts-check
    /**
     * @type {function(@foo)}
              ~~~~~~~~~~~~~~
!!! error TS7014: Function type, which lacks return-type annotation, implicitly has an 'any' return type.
                       ~
!!! error TS1110: Type expected.
                        ~~~
!!! error TS2304: Cannot find name 'foo'.
     */
    let x;